--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h2>Product Survey</h2>
+    <!-- table to display to select products -->
+    <table id="products"></table> 
+    <!-- table to display for results -->
+    <table id="results"></table>
     
     <script src="js/app.js"></script>
   </body>
