--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h2>Product Survey</h2>
     <!-- table to display to select products -->
-    <table id="products"></table> 
+    <table id="products-table"></table> 
     <!-- table to display for results -->
-    <table id="results"></table>
+    <table id="results-table"></table>
     
     <script src="js/app.js"></script>
   </body>
