--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <h2>Product Survey</h2>
     <!-- table to display to select products -->
     <table id="products-table"></table> 
+    <!-- <tr colspan="3">
+      <th>Which of the 3 products are you most likely to purchase?</th>
+    </tr>
+    <tr>
+      <td><img id="img1" src="" alt="">
+      <p id="img1-text"></p>
+      </td>
+      <td><img id="img2" src="" alt="">
+      <p id="img2-text"></p>
+      </td>
+      <td><img id="img3" src="" alt="">
+      <p id="img3-text"></p>
+      </td>
+    </tr> -->
     <!-- table to display for results -->
     <table id="results-table"></table>
     
