--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h2>Product Survey</h2>
+    <h3>Which of the 3 are you most likely to purchase?</h3>
     <ul id="results"></ul>
     <section id="products-section">
         <img id="img1" src="" alt="">
