--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Bus Mall</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
   </head>
   <body>
     <h2>Product Survey</h2>
@@ -15,6 +16,7 @@
         <img id="img2" src="" alt="">
         <img id="img3" src="" alt="">
     </section>
+    <canvas id="chart" height="500px" width="600px"></canvas>
     
     <script src="js/app.js"></script>
   </body>
