--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>Product Survey</h2>
     <h3>Which of the 3 are you most likely to purchase?</h3>
     <ul id="results"></ul>
+    <table id="results-table"></table>
     <section id="products-section">
         <img id="img1" src="" alt="">
         <img id="img2" src="" alt="">
