--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h2>Product Survey</h2>
-    <h3>Which of the 3 are you most likely to purchase?</h3>
+    <h3 id="h3">Which of the 3 are you most likely to purchase?</h3>
     <ul id="results"></ul>
     <table id="results-table"></table>
     <section id="products-section">
