--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <img id="img2" src="" alt="">
         <img id="img3" src="" alt="">
     </section>
+    <div>
+      <button id="refresh" type="button">Vote Another Round</button>
+    </div>
     <canvas id="chart" height="500px" width="600px"></canvas>
-    
     <script src="js/app.js"></script>
   </body>
 </html>
