--- a/cart.html
+++ b/cart.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/cart_style.css">
     <title>Bus Mall Shopping Cart</title>
   </head>
