--- a/cart.html
+++ b/cart.html
@@ -15,26 +15,26 @@
         <fieldset>
           <legend>Customer Shipping Information</legend>
 
-          <label for="customer-name">Name:</label>
-          <input name="customer-name" type="text" required />
+          <label for="customerName">Name:</label>
+          <input name="customerName" type="text" required />
 
-          <label for="customer-address">Address:</label>
-          <input name="customer-address" type="text" required />
+          <label for="customerAddress">Address:</label>
+          <input name="customerAddress" type="text" required />
 
-          <label for="customer-city">City:</label>
-          <input name="customer-city" type="text" required />
+          <label for="customerCity">City:</label>
+          <input name="customerCity" type="text" required />
 
-          <label for="customer-state">State:</label>
-          <input name="customer-state" type="text" maxlength="2" required />
+          <label for="customerState">State:</label>
+          <input name="customerState" type="text" maxlength="2" required />
 
-          <label for="customer-zip">Zip Code:</label>
-          <input name="customer-zip" type="number" required />
+          <label for="customerZip">Zip Code:</label>
+          <input name="customerZip" type="number" required />
 
-          <label for="customer-phone">Phone Number:</label>
-          <input name="customer-phone" type="number" required />
+          <label for="customerPhone">Phone Number:</label>
+          <input name="customerPhone" type="number" required />
 
-          <label for="credit-card">Credit Card Number:</label>
-          <input name="credit-card" type="number" required />
+          <label for="creditCard">Credit Card Number:</label>
+          <input name="creditCard" type="number" required />
 
           <button id="process-order">Process Order</button>
         </fieldset>
