--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div>
       <button id="refresh" type="button">Vote Another Round</button>
     </div>
-    <canvas id="chart" height="100px" width="100px"></canvas>
+    <canvas id="chart" height="500px" width="600px" class="hidden"></canvas>
     <script src="js/app.js"></script>
   </body>
 </html>
